renames templates appropriately

--- a/assets/templates/all-adhocs.tmpl
+++ b/assets/templates/all-adhocs.tmpl
@@ -50,7 +50,7 @@
           </div>
           <!-- -->
           <div class="search__filter__content">
-            {{ template "partials/filter-results" . }}
+            {{ template "partials/data-aggregation-filters" . }}
           </div>
           <div class="search__filter__content">
             {{ template "partials/archived-release-message" . }}
@@ -72,7 +72,7 @@
               </button>
           </div>
           <div class="search__results">
-            {{ template "partials/testresults" . }}
+            {{ template "partials/data-aggregation-results" . }}
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
