--- a/assets/templates/home-methodology.tmpl
+++ b/assets/templates/home-methodology.tmpl
@@ -52,7 +52,7 @@
           </div>
          
           <div class="search__filter__content">
-            {{ template "partials/filter-results" . }}
+            {{ template "partials/data-aggregation-filters" . }}
           </div>
           <div class="search__filter__content">
             {{ template "partials/archived-release-message" . }}
@@ -74,7 +74,7 @@
               </button>
           </div>
           <div class="search__results">
-            {{ template "partials/testresults" . }}
+            {{ template "partials/data-aggregation-results" . }}
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
@@ -86,7 +86,7 @@
     <div class="ons-grid__col ons-col-4@m">
          
          <div class="search__filter__content">
-            {{ template "partials/filter-results" . }}
+            {{ template "partials/data-aggregation-filters" . }}
           </div>
           <div class="search__filter__content">
             {{ template "partials/archived-release-message" . }}
