--- a/assets/templates/partials/data-aggregation-filters.tmpl
+++ b/assets/templates/partials/data-aggregation-filters.tmpl
@@ -234,7 +234,7 @@
                     <label class="hidden" for="select-wide">
                         Updated
                     </label>
-                    <select  id="select-wide" name="select" class="ons-input ons-input--select ons-input--block updated-select">
+                    <select id="lastUpdatedSelect" name="select" class="ons-input ons-input--select ons-input--block updated-select">
                         <option value="select" selected>Select last updated</option>
                         <option value="today">Today</option>
                         <option value="week">Last 7 Days</option>
