--- a/assets/templates/published-requests.tmpl
+++ b/assets/templates/published-requests.tmpl
@@ -45,7 +45,7 @@
             <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
           </div>
           <div class="search__filter__content">
-            {{ template "partials/filter-results" . }}
+            {{ template "partials/data-aggregation-filters" . }}
           </div>
           <div class="search__filter__content">
             {{ template "partials/archived-release-message" . }}
@@ -67,7 +67,7 @@
               </button>
           </div>
           <div class="search__results">
-            {{ template "partials/testresults" . }}
+            {{ template "partials/data-aggregation-results" . }}
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
