--- a/assets/templates/all-methodologies.tmpl
+++ b/assets/templates/all-methodologies.tmpl
@@ -49,7 +49,7 @@
           </div>
           <!-- -->
           <div class="search__filter__content">
-            {{ template "partials/filter-results" . }}
+            {{ template "partials/data-aggregation-filters" . }}
           </div>
           <div class="search__filter__content">
             {{ template "partials/archived-release-message" . }}
@@ -71,7 +71,7 @@
               </button>
           </div>
           <div class="search__results">
-            {{ template "partials/testresults" . }}
+            {{ template "partials/data-aggregation-results" . }}
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
