--- a/assets/templates/time-series-tool.tmpl
+++ b/assets/templates/time-series-tool.tmpl
@@ -1,5 +1,5 @@
 {{ $lang := .Language }}
-<div class="ons-container search__container">
+<div id="timeSeriesContainer" class="ons-container search__container">
   <div class="ons-grid">
     <!-- <h3>Terrrrr</h3> -->
     <div class="ons-grid__col ons-col-12@m">
@@ -52,7 +52,7 @@
           </div>
          
          <div class="search__filter__content">
-            {{ template "partials/filter-results" . }}
+            {{ template "partials/data-aggregation-filters" . }}
           </div>
           <div class="search__filter__content">
             {{ template "partials/archived-release-message" . }}
@@ -66,15 +66,17 @@
             {{ template "partials/count" . }}
           </div>
           <div class="search__sort">
-            {{ template "partials/sort" . }}
+            {{ template "partials/time-series-selection" . }}
           </div>
           <div class="search__filter__mobile-filter-toggle hide">
               <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
                 <span class="ons-btn__inner">Filter results</span>
               </button>
           </div>
-          <div class="search__results">
-            {{ template "partials/testresults" . }}
+          <div class="test-delegation">
+            <div class="search__results">
+              {{ template "partials/data-aggregation-results" . }}
+            </div>
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
