--- a/assets/templates/time-series-tool.tmpl
+++ b/assets/templates/time-series-tool.tmpl
@@ -73,7 +73,7 @@
                 <span class="ons-btn__inner">Filter results</span>
               </button>
           </div>
-          <div class="test-delegation">
+          <div class="time-series-results">
             <div class="search__results">
               {{ template "partials/data-aggregation-results" . }}
             </div>
