removes all releases filter from the home publications page
Signed-off-by: lindenmckenzie <linden.mckenzie@ons.gov.uk>

--- a/assets/templates/partials/data-aggregation-filters.tmpl
+++ b/assets/templates/partials/data-aggregation-filters.tmpl
@@ -69,8 +69,8 @@
             </legend>
             <div class="js-checkbox-container">
                 <div class="filters__field">
-                    <input type="checkbox" id="checkbox-previous" class="js-auto-submit__input" name="allReleases" value="1">
-                    <label for="checkbox-previous">
+                    <input type="checkbox" id="all-releases" name="allReleases" value="1">
+                    <label for="all-releases">
                         Show all releases over time (only showing latest one of each by default)
                     </label>
                 </div>
