localizes filter template strings

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -74,7 +74,7 @@
             </fieldset>
             <noscript>
                 <button type="submit" class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                        <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                        <span class="ons-btn__inner"><span class="ons-btn__text">{{ localise "Filter" $lang 4}}</span></span>
                 </button>
             </noscript>
         </details>
@@ -145,7 +145,7 @@
                 <noscript>
                     <button type="submit"
                             class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                            <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                            <span class="ons-btn__inner"><span class="ons-btn__text">{{ localise "Filter" $lang 4}}</span></span>
                     </button>
                 </noscript>
             </details>
@@ -223,7 +223,7 @@
         <noscript>
             <button type="submit"
                     class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                    <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                    <span class="ons-btn__inner"><span class="ons-btn__text">{{ localise "Filter" $lang 4}}</span></span>
             </button>
         </noscript>
     </form>
@@ -272,7 +272,7 @@
         <noscript>
             <button type="submit"
                     class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                    <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                    <span class="ons-btn__inner"><span class="ons-btn__text">{{ localise "Filter" $lang 4}}</span></span>
             </button>
         </noscript>
     </form>
@@ -318,7 +318,7 @@
                 <noscript>
                     <button type="submit"
                             class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                            <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
+                            <span class="ons-btn__inner"><span class="ons-btn__text">{{ localise "Filter" $lang 4}}</span></span>
                     </button>
                 </noscript>
             </details>
@@ -326,6 +326,6 @@
     {{ end }}
 <div class="search__filter__mobile-filter-toggle margin-bottom--8 hide">
     <button id="show-results" type="button" class="ons-btn" aria-controls="search-filter">
-        <span class="ons-btn__inner">Show results</span>
+        <span class="ons-btn__inner">{{ localise "ShowResults" $lang 4}}</span>
     </button>
 </div>
